--- a/src/index.css
+++ b/src/index.css
@@ -133,14 +133,40 @@ li + li {
 }
 
 .passphrase {
+  position: relative;
   display: flex;
   align-items: center;
-  padding: 24px;
+  padding: 1.5rem 3.5rem;
   width: 100%;
   min-height: 155px;
   font-size: 24px;
   text-align: center;
   border: 2px dashed #3ab73a;
+}
+
+.passphrase__content:not(:empty) + .passphrase__icon {
+  display: block;
+}
+
+.passphrase__icon {
+  display: none;
+  position: absolute;
+  right: 0;
+  margin-right: 0.5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 0;
+  background-color: transparent;
+}
+
+.passphrase__path-copied {
+  display: none;
+}
+
+.passphrase__icon-text {
+  display: inline-block;
+  margin-top: 0.4rem;
+  font-size: 0.8rem;
 }
 
 .button {
