--- a/src/index.css
+++ b/src/index.css
@@ -144,19 +144,28 @@ li + li {
   border: 2px dashed #3ab73a;
 }
 
-.passphrase__content:not(:empty) + .passphrase__icon {
+.passphrase__content:not(:empty) + .passphrase__button {
   display: block;
 }
 
-.passphrase__icon {
+.passphrase__button {
   display: none;
   position: absolute;
   right: 0;
   margin-right: 0.5rem;
-  width: 2.5rem;
-  height: 2.5rem;
   border: 0;
   background-color: transparent;
+}
+
+.passphrase__icon {
+  display: block;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.passphrase__action-text {
+  display: block;
+  font-size: 0.8rem;
 }
 
 .passphrase__path-copied {
@@ -187,4 +196,8 @@ li + li {
   cursor: not-allowed;
   color: green;
   background-color: #bbb;
+}
+
+.hidden {
+  display: none;
 }
