--- a/src/index.css
+++ b/src/index.css
@@ -112,7 +112,7 @@ li + li {
 }
 
 .title {
-  font-weight: 700;
+  font-weight: 600;
   font-size: 3.5rem;
   letter-spacing: 3px;
   line-height: 1;
@@ -146,11 +146,15 @@ li + li {
   align-items: center;
   padding: 1.5rem 3.5rem;
   width: 100%;
-  min-height: 155px;
-  font-size: 24px;
-  text-align: center;
+  min-height: 10rem;
   border: 2px dashed #3ab73a;
   border-radius: 24px;
+}
+
+.passphrase__content {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 .passphrase__content:not(:empty) + .passphrase__button {
